--- a/356F 2/app/src/main/res/layout/activity_deal_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_deal_page.xml
@@ -239,7 +239,7 @@
                 android:text="$100000"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:id="@+id/tvPrice"
+                android:id="@+id/tvOfferedPrice"
                 android:layout_weight="1"
                 android:textAppearance="@style/TextAppearance.AppCompat"
                 android:textSize="30sp"
