--- a/356F 2/app/src/main/res/layout/activity_product_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_product_page.xml
@@ -72,7 +72,7 @@
                     <TextView
                         android:text="$100000"
                         android:layout_height="wrap_content"
-                        android:id="@+id/tvPrice"
+                        android:id="@+id/tvOfferedPrice"
                         android:layout_weight="1"
                         android:textColor="@color/colorAccent"
                         android:textSize="22sp"
