--- a/356F 2/app/src/main/res/layout/history_page_row.xml
+++ b/356F 2/app/src/main/res/layout/history_page_row.xml
@@ -39,7 +39,7 @@
                 android:text="price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tvPrice"
+                android:id="@+id/tvOfferedPrice"
                 android:layout_weight="1"
                 android:textSize="18sp" />
 
