--- a/356F 2/app/src/main/res/layout/offer_list_item.xml
+++ b/356F 2/app/src/main/res/layout/offer_list_item.xml
@@ -62,7 +62,7 @@
                             android:text="TextView"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:id="@+id/tvBand"
+                            android:id="@+id/tvBuyerID"
                             android:layout_weight="1" />
                     </LinearLayout>
 
@@ -81,7 +81,7 @@
                     android:text="100000"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:id="@+id/tvPrice"
+                    android:id="@+id/tvOfferedPrice"
                     android:layout_weight="1"
                     android:gravity="left|center"
                     android:textSize="20sp" />
@@ -97,7 +97,7 @@
                 <Button
                     android:text="Accept"
                     android:layout_width="wrap_content"
-                    android:id="@+id/button2"
+                    android:id="@+id/btnAccept"
                     android:layout_weight="1"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="5dp"
@@ -110,7 +110,7 @@
                     android:text="Decline"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:id="@+id/button"
+                    android:id="@+id/btnDecline"
                     android:layout_weight="1"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="10dp" />
