--- a/356F 2/app/src/main/res/layout/post_list_item.xml
+++ b/356F 2/app/src/main/res/layout/post_list_item.xml
@@ -120,7 +120,7 @@
                     android:text="100000"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:id="@+id/tvPrice"
+                    android:id="@+id/tvOfferedPrice"
                     android:layout_weight="1"
                     android:gravity="left|center" />
 
