Offer details done

--- a/356F 2/app/src/main/res/layout/fragment_frag_offer.xml
+++ b/356F 2/app/src/main/res/layout/fragment_frag_offer.xml
@@ -53,7 +53,8 @@
         <ListView
             android:id="@+id/lvOfferList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            style="@style/Widget.AppCompat.Light.ListView.DropDown">
         </ListView>
 
     </LinearLayout>
