Revert "Offer details done"
This reverts commit 0026d67b38e794fe5f10d6f15bc5d7d89b655c35.

--- a/356F 2/app/src/main/res/layout/fragment_frag_offer.xml
+++ b/356F 2/app/src/main/res/layout/fragment_frag_offer.xml
@@ -53,8 +53,7 @@
         <ListView
             android:id="@+id/lvOfferList"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/Widget.AppCompat.Light.ListView.DropDown">
+            android:layout_height="wrap_content" >
         </ListView>
 
     </LinearLayout>
