Accept Decline button work

--- a/356F 2/app/src/main/res/layout/activity_offer_detail_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_offer_detail_page.xml
@@ -276,7 +276,7 @@
             android:textSize="20sp" />
 
         <CheckBox
-            android:id="@+id/checkBox5"
+            android:id="@+id/cbAgreement"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
