--- a/356F 2/app/src/main/res/layout/activity_offer_detail_page.xml
+++ b/356F 2/app/src/main/res/layout/activity_offer_detail_page.xml
@@ -263,7 +263,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/textView34"
+            android:id="@+id/tvAgreeTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
