--- a/356F 2/app/src/main/res/layout/fragment_frag_offer.xml
+++ b/356F 2/app/src/main/res/layout/fragment_frag_offer.xml
@@ -12,6 +12,23 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnHistory"
+                style="@style/Widget.AppCompat.Button.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_weight="1"
+                android:text="finshed offer (history)"
+                android:textColor="#04B404" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="3">
 
@@ -48,6 +65,7 @@
                 android:layout_width="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true" />
+
         </LinearLayout>
 
         <ListView
