--- a/356F 2/app/src/main/res/layout/history_page_row.xml
+++ b/356F 2/app/src/main/res/layout/history_page_row.xml
@@ -1,48 +1,184 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <RelativeLayout
+        android:id="@+id/activity_offer_page"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:context="com.example.bunnyfung.a356f.OfferPage">
 
-        <TextView
-            android:text="user"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvUser"
-            android:textSize="24sp" />
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@mipmap/ic_launcher"
-                android:id="@+id/imageView4"
-                android:layout_weight="1" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <TextView
-                android:text="introduction"
+                android:id="@+id/tv01"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tvIntroduction"
-                android:layout_weight="1" />
+                android:layout_marginLeft="15dp"
+                android:text="User:"
+                android:textColor="@android:color/holo_orange_dark"
+                android:textSize="16sp" />
 
             <TextView
-                android:text="price"
+                android:id="@+id/tvUser"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tvOfferedPrice"
-                android:layout_weight="1"
-                android:textSize="18sp" />
+                android:layout_marginLeft="5dp"
+                android:text="Edwin Ho"
+                android:textSize="14sp" />
+
 
         </LinearLayout>
-    </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginTop="30dp"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/ivPhoto"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_weight="1"
+                app:srcCompat="@android:drawable/sym_def_app_icon" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:layout_marginLeft="130dp"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <TextView
+                android:id="@+id/tv02"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Description:"
+                android:textColor="@android:color/holo_orange_dark"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tv03"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_weight="1"
+                android:text="Price: $100"
+                android:textColor="@android:color/holo_red_dark"
+                android:textSize="16sp"
+                android:textStyle="bold|italic" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="120dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="130dp"
+            android:layout_marginTop="50dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvDescription"
+                android:layout_width="120dp"
+                android:layout_height="100dp"
+                android:layout_weight="0.30"
+                android:text="I am a boy and she is a girl."
+                android:textSize="12sp" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_marginLeft="260dp"
+            android:layout_marginTop="50dp"
+            android:orientation="horizontal"
+            android:weightSum="1">
+
+            <TextView
+                android:id="@+id/tv04"
+                android:layout_width="40dp"
+                android:layout_height="20dp"
+                android:layout_weight="0.1"
+                android:text="Date:"
+                android:textColor="@android:color/holo_orange_dark"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tvDate"
+                android:layout_width="50dp"
+                android:layout_height="20dp"
+                android:layout_weight="0.9"
+                android:text="26/11/2016"
+                android:textSize="12sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_marginLeft="260dp"
+            android:layout_marginTop="70dp"
+            android:orientation="horizontal"
+            android:weightSum="1">
+
+            <TextView
+                android:id="@+id/tv05"
+                android:layout_width="50dp"
+                android:layout_height="20dp"
+                android:layout_weight="0.1"
+                android:text="Time:"
+                android:textColor="@android:color/holo_orange_dark"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tvTime"
+                android:layout_width="50dp"
+                android:layout_height="20dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="0.9"
+                android:text="05:25 pm"
+                android:textSize="12sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="130dp"
+            android:layout_marginTop="95dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv06"
+                android:layout_width="50dp"
+                android:layout_height="20dp"
+                android:text="Place:"
+                android:textColor="@android:color/holo_orange_dark"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tvPlace"
+                android:layout_width="180dp"
+                android:layout_height="20dp"
+                android:text="North Point MTR Station"
+                android:textSize="12sp" />
+
+
+        </LinearLayout>
+
+    </RelativeLayout>
 </LinearLayout>
